--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <h1>EE21!</h1>
     Bla bla bla bla bla.
+    <img src="https://www.agria.se/imagevault/publishedmedia/qh984mivj0ozxpw740fd/islandshast-grimaserar.jpg">
     
     
   </body>
