--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Rulez!</title>
   </head>
-  <body>
+  <body style="background-color:black; color:white">
     <h1>EE21!</h1>
     Bla bla bla bla bla.
     <img src="https://www.agria.se/imagevault/publishedmedia/qh984mivj0ozxpw740fd/islandshast-grimaserar.jpg">
